unpackaged/main/default/objects/QuoteLineItem/fields/Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date__c</fullName>
    <formula>if(ISBLANK(Quote.Invoice_Id__c),if( Start_Date__c &gt;  DATEVALUE(Quote.OMC_Approved_Date__c) ,Start_Date__c,DATEVALUE(Quote.OMC_Approved_Date__c)),Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>