unpackaged/main/default/objects/QuoteLineItem/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <formula>IF( Complimentary__c = TRUE, IF(Record_Type__c=&quot;B2C&quot;, (UnitPrice * Quantity) - Total_Price__c , (UnitPrice * Quantity) - Discounted_Amount__c - Total_Price__c) , IF(Record_Type__c=&quot;B2C&quot;, (UnitPrice * Quantity) - Discounted_Amount__c - Pro_Rate_Amount__c, (UnitPrice * Quantity) - Discounted_Amount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price after discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>