unpackaged/main/default/objects/QuoteLineItem/fields/Amount_Despite_VIP__c.field-meta.xml
<CustomField>
    <fullName>Amount_Despite_VIP__c</fullName>
    <label>Amount Despite VIP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>