unpackaged/main/default/objects/QuoteLineItem/fields/CampaignId__c.field-meta.xml
<CustomField>
    <fullName>CampaignId__c</fullName>
    <label>Campaigns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>