unpackaged/main/default/objects/QuoteLineItem/fields/Complimentary__c.field-meta.xml
<CustomField>
    <fullName>Complimentary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Copy from Oppty Product Complimentary__c</description>
    <label>Complimentary</label>
    <type>Checkbox</type>
</CustomField>