unpackaged/main/default/objects/QuoteLineItem/fields/Consumed_Ad_Credit__c.field-meta.xml
<CustomField>
    <fullName>Consumed_Ad_Credit__c</fullName>
    <description>Represents number of ad credits consumed by an agent just before upgrading the package.</description>
    <inlineHelpText>Represents number of ad credits consumed by an agent just before upgrading the package.</inlineHelpText>
    <label>Consumed Ad Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>