unpackaged/main/default/objects/QuoteLineItem/fields/CurrPackageAdCredit__c.field-meta.xml
<CustomField>
    <fullName>CurrPackageAdCredit__c</fullName>
    <description>Stores agent&#39;s current package total ad credit</description>
    <label>Current Package Ad Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>