unpackaged/main/default/objects/QuoteLineItem/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Copy from Oppty Product Discount_Amount__</description>
    <label>Discount Amt</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>