unpackaged/main/default/objects/QuoteLineItem/fields/Discount_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discount_Reason__c</fullName>
    <label>Discount Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child Orders from Bulk</fullName>
            </value>
            <value>
                <fullName>Goodwill/ Relationship Building</fullName>
            </value>
            <value>
                <fullName>Non-Expiry SO (Legacy)</fullName>
            </value>
            <value>
                <fullName>Order Conv (Legacy)</fullName>
            </value>
            <value>
                <fullName>Order Ext. (Legacy)</fullName>
            </value>
            <value>
                <fullName>Technical issues</fullName>
            </value>
            <value>
                <fullName>Unknown / Undefined Prd Balance (Legacy)</fullName>
            </value>
            <value>
                <fullName>VIP (Lifetime FOC)</fullName>
            </value>
            <value>
                <fullName>VIP (Relationship)</fullName>
            </value>
            <value>
                <fullName>VIP (Spending)</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Loyalty Discount</fullName>
            </value>
            <value>
                <fullName>Managerial Discount</fullName>
            </value>
            <value>
                <fullName>Marketing Promo</fullName>
            </value>
            <value>
                <fullName>VIP (migration)</fullName>
            </value>
            <value>
                <fullName>First-Timer Discount</fullName>
            </value>
            <value>
                <fullName>Agent Referral: Referee</fullName>
            </value>
            <value>
                <fullName>Renewal EB Offer</fullName>
            </value>
            <value>
                <fullName>Renewal EB Bonus</fullName>
            </value>
            <value>
                <fullName>Pioneer</fullName>
            </value>
            <value>
                <fullName>Agent Referral: Referrer</fullName>
            </value>
            <value>
                <fullName>Cash Voucher</fullName>
            </value>
            <value>
                <fullName>Renewal Promotion</fullName>
            </value>
            <value>
                <fullName>Renewal Bonus</fullName>
                <isActive>false</isActive>
                <label>Renewal Bonus</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>