unpackaged/main/default/objects/QuoteLineItem/fields/Display_Child_Products_on_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Display_Child_Products_on_Transactions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Copies from Product</description>
    <label>Display Child Products on Transactions</label>
    <type>Checkbox</type>
</CustomField>