unpackaged/main/default/objects/QuoteLineItem/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Copy from Oppty Product End_Date__</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>