unpackaged/main/default/objects/QuoteLineItem/fields/Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Amount__c</fullName>
    <formula>Amount__c + ( Amount__c * GST_VAT_Rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Amount</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Currency</type>
</CustomField>