unpackaged/main/default/objects/QuoteLineItem/fields/GST_VAT_Code1__c.field-meta.xml
<CustomField>
    <fullName>GST_VAT_Code1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GST/VAT Code1</label>
    <referenceTo>Tax_Code__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>