unpackaged/main/default/objects/QuoteLineItem/fields/GST_VAT_Code__c.field-meta.xml
<CustomField>
    <fullName>GST_VAT_Code__c</fullName>
    <description>Copy from Oppty Product GST_VAT_Code__c</description>
    <label>GST/VAT Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>