unpackaged/main/default/objects/QuoteLineItem/fields/GST_VAT_Rate__c.field-meta.xml
<CustomField>
    <fullName>GST_VAT_Rate__c</fullName>
    <description>Copy from Oppty Product GST_VAT_Rate__c</description>
    <label>GST/VAT Rate %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>