unpackaged/main/default/objects/QuoteLineItem/fields/Income_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Income_Account_Name__c</fullName>
    <label>Income Account Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>