unpackaged/main/default/objects/QuoteLineItem/fields/Is_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Is_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Bundle?</label>
    <type>Checkbox</type>
</CustomField>