unpackaged/main/default/objects/QuoteLineItem/fields/IsDiscretionaryAC__c.field-meta.xml
<CustomField>
    <fullName>IsDiscretionaryAC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to differentiate carryover Ad Credit From Bundle Ad Credit</description>
    <inlineHelpText>Checkbox to carryover discretionary Ad Credit From Bundle Ad Credit</inlineHelpText>
    <label>Is Discretionary AC</label>
    <type>Checkbox</type>
</CustomField>