unpackaged/main/default/objects/QuoteLineItem/fields/Line_Description2__c.field-meta.xml
<CustomField>
    <fullName>Line_Description2__c</fullName>
    <description>Copy from Oppty Line Line_Description2__c</description>
    <label>Line Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>