unpackaged/main/default/objects/QuoteLineItem/fields/Opportunity_Line_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line_Item_ID__c</fullName>
    <formula>CASESAFEID(OpportunityLineItem.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Line Item ID</label>
    <type>Text</type>
</CustomField>