unpackaged/main/default/objects/QuoteLineItem/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Parent</label>
    <length>20</length>
    <type>Text</type>
</CustomField>