unpackaged/main/default/objects/QuoteLineItem/fields/Parent_Aggregated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Parent_Aggregated_Amount__c</fullName>
    <description>This field is updated during print contract. To store at the Parent Bundled line item. This is roll up of all the child items in this parent bundle.</description>
    <label>Parent Aggregated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>