unpackaged/main/default/objects/QuoteLineItem/fields/PO__c.field-meta.xml
<CustomField>
    <fullName>PO__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto-Activation</label>
    <type>Checkbox</type>
</CustomField>