unpackaged/main/default/objects/QuoteLineItem/fields/Price_before_discount1__c.field-meta.xml
<CustomField>
    <fullName>Price_before_discount1__c</fullName>
    <formula>IF( Complimentary__c = TRUE , IF( Record_Type__c  &lt;&gt; &#39;B2C&#39;, (UnitPrice * Quantity) -  Total_Price__c , IF(  FLOOR( SNo__c ) =SNo__c   , (UnitPrice * Quantity) , 0) ) , (UnitPrice * Quantity))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price before discount1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>