unpackaged/main/default/objects/QuoteLineItem/fields/Price_before_discount__c.field-meta.xml
<CustomField>
    <fullName>Price_before_discount__c</fullName>
    <label>Price before discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>