unpackaged/main/default/objects/QuoteLineItem/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <formula>TEXT(Quote.Quote_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Type</label>
    <type>Text</type>
</CustomField>