unpackaged/main/default/objects/QuoteLineItem/fields/Rev_Terms_in_months__c.field-meta.xml
<CustomField>
    <fullName>Rev_Terms_in_months__c</fullName>
    <description>Copy from Oppty Product Rev_Terms_in_months__c</description>
    <label>Rev. Terms in months</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>