unpackaged/main/default/objects/QuoteLineItem/fields/SNo__c.field-meta.xml
<CustomField>
    <fullName>SNo__c</fullName>
    <description>Copies from Opp line item</description>
    <label>SNo</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>