unpackaged/main/default/objects/QuoteLineItem/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Copy from Oppty Product Start_Date__</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>