unpackaged/main/default/objects/QuoteLineItem/fields/Tax_Amount_new__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount_new__c</fullName>
    <formula>Amount__c  * GST_VAT_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>