unpackaged/main/default/objects/QuoteLineItem/validationRules/Discount_Amt_cannot_exceed_Total_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Amt_cannot_exceed_Total_Price</fullName>
    <active>true</active>
    <errorConditionFormula>Discount_Amount__c &gt;  Total_Price__c</errorConditionFormula>
    <errorDisplayField>Discount_Amount__c</errorDisplayField>
    <errorMessage>Discount Amount shouldn&#39;t exceed Total Price</errorMessage>
</ValidationRule>