unpackaged/main/default/objects/QuoteLineItem/validationRules/Discount_should_be_between_0_and_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_should_be_between_0_and_100</fullName>
    <active>false</active>
    <errorConditionFormula>OR( 
Discount__c &lt; 0, 
Discount__c &gt; 1 
)</errorConditionFormula>
    <errorDisplayField>Discount__c</errorDisplayField>
    <errorMessage>Discount should be between 0% and 100%</errorMessage>
</ValidationRule>