unpackaged/main/default/objects/QuoteLineItem/validationRules/Start_Date_must_be_today_or_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_must_be_today_or_future</fullName>
    <active>false</active>
    <description>Start Date must be today or future date. During product creation (using Oppty Clone with Products), doesn&#39;t need to check this rule.</description>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(Quote.Approval_Status__c,&quot;OMC Approval Rejected&quot;)), 
NOT ISNEW(),
Start_Date__c &lt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date must be today or future date</errorMessage>
</ValidationRule>