unpackaged/main/default/objects/QuoteLineItem/validationRules/User_cant_input_both_Disc_and_Amt.validationRule-meta.xml
<ValidationRule>
    <fullName>User_cant_input_both_Disc_and_Amt</fullName>
    <active>true</active>
    <description>User can&#39;t input both Discount % and Discount Amount at the same time</description>
    <errorConditionFormula>AND( 
Complimentary__c = FALSE, 
Discount_Amount__c&lt;&gt;0, 
Discount__c&lt;&gt;0 ,
ISBLANK(Quote_Type__c) 
)</errorConditionFormula>
    <errorDisplayField>Discount_Amount__c</errorDisplayField>
    <errorMessage>You cannot apply a discount % and discount amount at the same time.</errorMessage>
</ValidationRule>